welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: value fini
while (fini=false){
       ^BDRBuggle:3: error: not found: type Str
    var m:Str=litMessage()}
          ^BDRBuggle:4: error: not found: value m
  if (m=='R'){
      ^BDRBuggle:6: error: not found: value m
  }else if (m=='L'){
            ^BDRBuggle:8: error: not found: value m
  }else if (m=='I'){
            ^BDRBuggle:12: error: not found: value m
  }else if (m=='A'){
            ^BDRBuggle:14: error: not found: value m
  }else if (m=='B'){
            ^BDRBuggle:16: error: not found: value m
  }else if (m=='C'){
            ^BDRBuggle:18: error: not found: value m
  }else if (m=='Z'){
            ^BDRBuggle:20: error: not found: value m
  }else if (m=='Y'){
            ^BDRBuggle:22: error: not found: value m
  }else if (m=='X'){
            ^